--- a/assets/scss/partials/_sections.scss
+++ b/assets/scss/partials/_sections.scss
@@ -1333,7 +1333,9 @@
     line-height: 1.5;
     margin-bottom: 20px;
     .author-image {
-      img {border-radius: 100%; height: 75px; min-width: 75px;  }
+      border-radius: 100%; height: 75px; width: 75px;  background-color: #fff; overflow: hidden;
+      margin-bottom: 1rem;
+      img {width: 100%}
       margin-right: 20px; }
     .name {font-weight: 700;}
     .what-they-did  {font-style: italic;}
