--- a/assets/scss/lib/_initial-variables.scss
+++ b/assets/scss/lib/_initial-variables.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $primary-color: #333;
 $active-color: #00009c;
 $active-gray: #5F5F5F;
@@ -10,7 +12,7 @@ $base-font-size: 16px;
 $base-line-height: 1.3;
 $smaller-line-height: 1.12500;
 
-$base-spacing-size: (60/$base-font-size) * 1rem;
+$base-spacing-size: math.div(60, $base-font-size) * 1rem;
 
 $base-mobile-side-margin: 20px;
 $base-widescreen-side-margin: 75px;
