--- a/assets/scss/_icons.sass
+++ b/assets/scss/_icons.sass
@@ -40,7 +40,17 @@
   background-repeat: no-repeat
 
 
-[data-icon-type="umělecké dílo"]
-  background-image: url(~assets/images/icons/icon-object-publikace.svg?external)
+[data-icon-type="umělecká díla"]
+  background-image: url(~assets/images/icons/icon-object-umelecke-dilo.svg?external)
+  background-size: contain
+  background-repeat: no-repeat
+
+[data-icon-type="události"]
+  background-image: url(~assets/images/icons/icon-object-udalost.svg?external)
+  background-size: contain
+  background-repeat: no-repeat
+
+[data-icon-type="místa"]
+  background-image: url(~assets/images/icons/icon-object-misto.svg?external)
   background-size: contain
   background-repeat: no-repeat
