--- a/assets/scss/partials/_sections.scss
+++ b/assets/scss/partials/_sections.scss
@@ -280,7 +280,7 @@
     }
   }
 
-  .card-content {
+  .card:not(.card-detail) .card-content {
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -315,277 +315,6 @@
   }
 }
 
-
-
-.card[data-component='card-detail'] {
-  $card-detail-padding: 30px;
-
-  margin-top: $base-mobile-side-margin * 2;
-  margin-bottom: $base-mobile-side-margin * 2;
-
-  padding-left: $base-mobile-side-margin * 2;
-  padding-right: $base-mobile-side-margin * 2;
-
-  &.card-detail-page {
-    margin-top: 2rem;
-    width: 50%;
-  }
-
-  &:not(.card-detail-page) {
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 9;
-  }
-
-  width: 100%;
-
-  max-width: unset;
-
-  @at-root .main-container[data-mode='objects'] & {
-    position: static;
-  }
-
-  @include from($widescreen) {
-    max-width: $max-content-full-width;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .meta-category {
-    display: flex;
-  }
-
-  .text-icon {
-    font-size: 26px;
-    margin-right: math.div($base-mobile-side-margin, 2);
-  }
-
-  .layer-bar {
-    display: flex;
-    justify-content: space-between;
-    height: 41px;
-    line-height: 41px;
-    padding: 0 $card-detail-padding;
-
-    .actions {
-      float: right;
-      font-size: 16px;
-      font-weight: 700;
-      .item {
-        border-left: 1px solid rgba(0, 0, 0, 0.15);
-        padding-left: 15px;
-        text-transform: uppercase;
-      }
-    }
-  }
-
-  .card-content-container {
-    padding: 10px $card-detail-padding $card-detail-padding;
-    cursor: default; /* overriding the cursor for .card */
-  }
-
-  .subheader-bar {
-    display: flex;
-    justify-content: space-between;
-
-    .actions {
-      width: 93px;
-      height: $header-main-height;
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 0.2em 0.5em -0.125em rgba(10, 10, 10, 0.1),
-        0 0px 0 1px rgba(10, 10, 10, 0.02);
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-
-      .item {
-        &:first-child {
-          margin-left: 0;
-          &::before {
-            content: none;
-          }
-        }
-
-        &:before {
-          content: '';
-          width: 1px;
-          height: 17px;
-          background: $passive-gray;
-          margin-right: 14px;
-          margin-left: 15px;
-          display: inline-block;
-          position: relative;
-          top: -5px;
-        }
-      }
-    }
-  }
-
-  .title-bar {
-    justify-content: center;
-    margin-bottom: $base-mobile-side-margin * 2;
-  }
-  .title-bar .card-title {
-    font-size: 32px;
-  }
-
-  .card-content {
-
-    height: auto;
-
-    @include from($widescreen) {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: row;
-      max-width: 792px;
-
-    }
-
-
-  }
-
-  .card-content-in {
-    margin: 0 auto;
-  }
-
-  .card-content--description {
-
-    font-size: 16px;
-    word-wrap: break-word;
-
-
-    @include until($widescreen) {
-
-      margin-bottom: $base-mobile-side-margin;
-
-    }
-
-    @include from($widescreen) {
-      flex-basis: 50%;
-      max-width: 426px;
-
-    }
-
-
-
-  }
-
-  .card-content--description,
-  .card-content--meta {
-    flex-grow: 0;
-    flex-shrink: 0;
-  }
-
-  .card-content--meta {
-    padding-right: 5px;
-    flex-basis: 40%;
-    .item-meta--heading {
-      font-weight: 700;
-      margin-right: $base-mobile-side-margin * 2;
-    }
-    .item-meta {
-      display: flex;
-      justify-content: flex-start;
-      font-size: 16px;
-      margin-bottom: 0.5rem;
-    }
-  }
-
-  .gallery {
-    $gallery-height: 466px;
-
-    height: auto;
-    margin-top: $base-mobile-side-margin * 3;
-    margin-bottom: 0; /* :NOTE: overriding the .card .gallery margin bottom */
-
-    .gallery-image {
-      height: $gallery-height;
-      overflow: hidden;
-      width: 100%;
-      background: transparent;
-      text-align: center;
-      height: auto;
-      position: relative;
-
-      .button-open-gallery {
-        display: inline-block;
-        background: #fff;
-        position: absolute; bottom: 55px; right: 15px;
-        height: 50px;
-        line-height: 50px;
-        min-height: auto;
-        font-size: 14px;
-        width: 20%;
-        max-width: 200px;
-        min-width: 150px;
-      }
-
-      a {
-        background-color: #eee;
-        display: block;
-        height: 466px;
-      }
-    }
-
-    .gallery-description {
-      margin-top: 10px;
-      font-style: italic;
-      font-size: 14px;
-      text-align: center;
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-
-    }
-  }
-
-  .gallery-nav {
-    display: block;
-    position: static;
-    width: auto;
-    height: auto;
-    padding: 0;
-
-    .prev,
-    .next {
-      width: 32px;
-      height: 32px;
-      border-radius: 32px;
-      line-height: 32px;
-      position: absolute;
-      display: inline-block;
-      z-index: 9;
-    }
-
-    .prev {
-      top: 50%;
-      margin-top: -16px;
-      left: $base-mobile-side-margin;
-    }
-
-    .next {
-      top: 50%;
-      margin-top: -16px;
-      right: $base-mobile-side-margin;
-    }
-  }
-
-  .related-maps {
-    margin-top: $base-mobile-side-margin * 4;
-
-    .title {
-      font-size: 22px;
-      text-align: center;
-    }
-  }
-}
 
 [data-component='mapbox'] {
   flex: auto;
@@ -718,41 +447,11 @@
   }
 }
 
-.leaflet-marker-icon {
-  &.inactive {
-    opacity: 0.1;
-    pointer-events: none;
-  }
-
-  &.active {
-    z-index: 999 !important;
-
-    .mdh-map-icon {
-      $iconSize: 50px;
-
-      width: $iconSize;
-      height: $iconSize;
-      border-radius: $iconSize;
-    }
-  }
-}
 
 /*
   Here, the
 */
-.mdh-map-icon {
-  $iconSize: 40px;
 
-  background-color: #fff;
-  width: $iconSize;
-  height: $iconSize;
-  border-radius: $iconSize;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 15px auto;
-  transition: width, heigh, border-radius 0.25s ease-in-out;
-
-}
 
 .hero-box {
 
