--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -1,13 +1,14 @@
 .button {
 
   border: none;
+  color: #fff;
   padding: 0;
   display: inline-block;
   text-align: center;
   cursor: pointer;
   line-height: 65px;
   border-radius: 12px;
-  background-color: #F3F3F3;
+  background-color: #000;
   box-shadow: 0px 3px 6px #00000029;
   font-size: 16px;
   font-weight: 700;
@@ -19,6 +20,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  letter-spacing: .2em;
 
 
   &:active {
