Use white color for displaying the icon on black btn

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -54,6 +54,10 @@
   align-items: center;
   justify-content: space-between;
 
+  .button-icon {
+    fill: #fff;
+  }
+
 }
 
 .button.button-submit {
