Update gallery popup

--- a/assets/scss/defs/_typo-defs.sass
+++ b/assets/scss/defs/_typo-defs.sass
@@ -1,7 +1,7 @@
 %typo-main-title
 
   font-size: 3rem
-  font-family: 'Robot Condensed', sans-serif
+  font-family: 'Roboto Condensed', sans-serif
   line-height: 1.1
 
   +from($desktop)
