--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -23,6 +23,11 @@ html
   +widescreen
     font-size: 16px
 
+
+  &.popup-open
+    height: 100vh
+    overflow: hidden
+
 body
   font-family: 'Roboto Condensed', sans-serif
   font-weight: 400
