--- a/assets/scss/partials/_sections.scss
+++ b/assets/scss/partials/_sections.scss
@@ -371,7 +371,7 @@
   }
 
   .text-icon {
-    font-size: 21px;
+    font-size: 1.3125rem;
     margin-right: math.div($base-mobile-side-margin, 6);
   }
 
