--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -74,7 +74,7 @@ input {
   border: none;
   padding: 0 20px;
   font-family: 'Roboto', sans-serif;
-  font-size: 21px;
+  font-size: 1.3125rem;
   outline: 0;
 
   &:active,
