--- a/assets/scss/components/component-list-map.scss
+++ b/assets/scss/components/component-list-map.scss
@@ -41,12 +41,21 @@
 
 [data-component="list-map-item"] {
 
+  & > figure > a > img {
+    border-radius: 12px;
+  }
+
   figure {
     position: relative;
 
     img {
       object-fit: cover;
       width: 100%;
+
+      &:hover {
+        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16)
+      }
+
     }
 
     .list-map-nav {
