Update object detail, show description as html

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -55,6 +55,12 @@ p
   line-height: $base-line-height
   font-weight: 400
 
+p br
+  content: ""
+  height: 1em
+  display: block
+  width: 100%
+
 /* :CUSTOM CLASSES: */
 .home-info em
 
