--- a/assets/scss/components/component-list-map.scss
+++ b/assets/scss/components/component-list-map.scss
@@ -51,9 +51,10 @@
     img {
       object-fit: cover;
       width: 100%;
+      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
 
       &:hover {
-        box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16)
+        box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.16);
       }
 
     }
