--- a/assets/scss/defs/_typo-defs.sass
+++ b/assets/scss/defs/_typo-defs.sass
@@ -1,6 +1,6 @@
 %typo-main-title
 
-  font-size: 3rem
+  font-size: 5rem
   font-family: 'Roboto Condensed', sans-serif
   line-height: 1.1
 
@@ -17,9 +17,7 @@
   line-height: 1
   letter-spacing: -.05em
 
-  +from($desktop)
-
-    font-size: 10vw
+  font-size: clamp(8rem, 10vw, 10vw)
 
 
 
