Edit text, refactor map

--- a/assets/scss/_typography.sass
+++ b/assets/scss/_typography.sass
@@ -60,6 +60,10 @@
   font-size: 1.375rem
   line-height: 1.4
 
+  a
+    text-decoration: underline
+
+
   &.is-section-title
     text-align: center
 
@@ -74,6 +78,9 @@
 
 .typo-text
   font-size: 1.375rem
+
+  a
+    text-decoration: underline
 
 
 
