--- a/assets/scss/components/component-list-map.scss
+++ b/assets/scss/components/component-list-map.scss
@@ -124,6 +124,10 @@
     align-items: center;
   }
 
+  .typo-subtitle.list-map-item-title {
+    a {text-decoration: none;}
+  }
+
   @include until($tablet) {
 
   }
