--- a/assets/scss/defs/_initial-variables.sass
+++ b/assets/scss/defs/_initial-variables.sass
@@ -52,4 +52,4 @@ $base-viewport-width: 1920px
 $filter-width: 77px
 
 $mainTitleFontSize: 74px
-$subtitleFontSize: 22px
+$subtitleFontSize: clamp(22px, 1.14583333vw, 50px)
