--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -13,14 +13,16 @@
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
-  width: 284px;
+  min-width: 284px;
   outline: 0;
   line-height: 1;
   min-height: 65px;
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   letter-spacing: .2em;
+  padding-left: 1em;
+  padding-right: 1em;
 
 
   &:active {
