--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -371,5 +371,9 @@ a[href^="tel"]
 
 // components
 @import "components/component-list-map"
-
+.button-more-container
+  margin-top: 1em
+  display: flex
+  justify-content: center
+  align-items: center
 
